fix: [CDS-53848]: Fixed spacing issue for github webhook trigger condition panel (#14163)

--- a/src/modules/72-triggers/components/steps/WebhookConditionsPanel/WebhookConditionsPanel.module.scss
+++ b/src/modules/72-triggers/components/steps/WebhookConditionsPanel/WebhookConditionsPanel.module.scss
@@ -31,6 +31,10 @@
       font-weight: 500 !important;
     }
   }
+
+  .marginBottom {
+    margin-bottom: var(--spacing-11) !important;
+  }
 }
 
 .predefinedRows {
